Sectinfo for episode 2
- Added support for Sector info in episode 2.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,6 +8,6 @@ Version - 1
 ------------
 Version - 2 / Dev
 ------------
-+ New Sector info for Episode 1. (Xindage)
++ New Sector info for Episode 1 and 2. (Xindage)
 + Episode 1 and 2 now only spawn multiplayers items on Deathmatch. (Xindage)
 + New comments for the source scripts. (PerfectionismTech)
