--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,6 +8,8 @@ Version - 1
 ------------
 Version - 2 / Dev
 ------------
++ Episode 6 Added, Fate's Path.
 + New Sector info for Episode 1 and 2. (Xindage)
 + Episode 1 and 2 now only spawn multiplayers items on Deathmatch. (Xindage)
 + New comments for the source scripts. (PerfectionismTech)
+! Sector info for episode 1 is bugged for now.
