--- a/Changelog.txt
+++ b/Changelog.txt
@@ -8,11 +8,11 @@ Version - 1
 ------------
 Version - 2 / Dev
 ------------
-+ Episode 6 Added, Fate's Path.
++ Episode 6 Added, Fate's Path. (Buged and WIP)
 + New Sector info for Episode 1 and 2. (Xindage)
 + Episode 1 and 2 now only spawn multiplayers items on Deathmatch. (Xindage)
 + New comments for the source scripts. (PerfectionismTech)
 + Maces spawners incread up to 9. (Xindage)
 + Episode 1 has each area applying its own mace chance in deathmatch. (Xindage)
 + Players cannot get stuck anymore in mystic urn pit in citadel. (Xindage)
-! Sector info for episode 1 is bugged for now.
++ Add camera spots on map via scripting, to be used in chaos room. (Xindage)
