Starting works in episode 2.
- New chaos room, kinda hellist themed.
- Updated changelog.
- Added the camera scripts for episode 2.

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -13,6 +13,8 @@ Version - 2 / Dev
 + Episode 1 and 2 now only spawn multiplayers items on Deathmatch. (Xindage)
 + New comments for the source scripts. (PerfectionismTech)
 + Maces spawners incread up to 9. (Xindage)
-+ Episode 1 has each area applying its own mace chance in deathmatch. (Xindage)
++ Episode 1 and 2 has each area applying its own mace chance in deathmatch. (Xindage)
 + Players cannot get stuck anymore in mystic urn pit in citadel. (Xindage)
 + Add camera spots on map via scripting, to be used in chaos room. (Xindage)
++ Everyone in game gain a wing of wrath when someone pick it in multiplayer coop. (Xindage, PerfectionismTech)
++ Everyone in game gain a chaos device when someone reach the final area in multiplyaer coop. (Xindage, PerfectionismTech)
