--- a/Changelog.txt
+++ b/Changelog.txt
@@ -9,9 +9,10 @@ Version - 1
 Version - 2 / Dev
 ------------
 + New Sector info for Episode 1 and 2. (Xindage)
++ New Chaos room.
 + Episode 1 and 2 now only spawn multiplayers items on Deathmatch. (Xindage)
 + New comments for the source scripts. (PerfectionismTech)
-+ Maces spawners incread up to 9. (Xindage)
++ Maces spawners incread up to 9 on actor list. (Xindage)
 + Episode 1 and 2 has each area applying its own mace chance in deathmatch. (Xindage)
 + Players cannot get stuck anymore in mystic urn pit in citadel. (Xindage)
 + Add camera spots on map via scripting, to be used in chaos room. (Xindage)
@@ -19,3 +20,4 @@ Version - 2 / Dev
 + Everyone in game gain a chaos device when someone reach the final area in multiplyaer coop. (Xindage, PerfectionismTech, Madjack)
 + Final doors open slight faster. (Xindage)
 + Using chaos device right after opening the final door still let you reach the final map. (Xindage)
++ Killing all Minotaurs in The Portals of Chaos make all monsters in this area dies with it. (Xindage)
